2000-01-02  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmTaskBar/FvwmTaskBar.h:
	* FvwmButtons/FvwmButtons.c:
	* FvwmIconBox/FvwmIconBox.c:
	include fvwmlib.h before fvwm.h

1999-12-31  Dan Espen  <dane@mk.telcordia.com>

	* FvwmScript/FvwmScript.1: Adjustments.

1999-12-31  olicha  <olivier.chapuis@free.fr>

	* FvwmScript/Scripts/*:
	Rename Buttons, Colorset, Date, FileBrowser, Find, ScreenDump,
	ScreenSetup and WidgetDemo to ScriptFvwm*.
	Rename and modify BellSetup, KeyboardSetup, PointerSetup, Quit.
	Replace DeskSetup by ScriptFvwmDefaultStyle that allows to change
	and save most of the fvwm default styles

	* FvwmScript/Scripts/Makefile.am:
	The above scripts are installed in FVWM_CONFIGDIR

	* FvwmScript/FvwmScript.1
	New section EXAMPLES
1999-12-31  olicha  <olivier.chapuis@free.fr>

	* FvwmScript/FvwmScript.c (BuildGUI):
        Fixed DefaultColorset
	Fixed main Colorset against Widget Colors

1999-12-30  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmButtons/FvwmButtons.c (swallow):
	longer delay before forcing a colorset background on a swallowed window

	* FvwmScroll/GrabWindow.c:
	removed #define MAX_ICON_NAME_LEN; already in defaults.h

1999-12-29  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmTheme/FvwmTheme.c (parse_colorset):
	some clean up
	new options 'Plain' and 'NoShape'
	fixed bug that reset bg to default colour when the pixmap was removed

	* FvwmButtons/button.c (buttonColorset):
	* FvwmButtons/draw.c (RedrawButton):
	* FvwmButtons/FvwmButtons.c (recursive_change_colorset):
	Colorset fg/hilight/shdow colours are applied properly to buttons

1999-12-20  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmCommand/FvwmCommandS.c (close_pipes):
	another try to fix the FvwmCommandS-on-exit core dump

1999-12-28  olicha  <olivier.chapuis@free.fr>

	* FvwmScript/FvwmScript.c (ParseOptions):
	(main):
	* FvwmScript/FvwmScript.1
	New options FvwmScriptDefaultFont, FvwmScriptDefaultBack,
	FvwmScriptDefaultFore, FvwmScriptDefaultHilight,