@@ -1,3 +1,8 @@
+2000-01-03  olicha <olivier.chapuis@free.fr>
+
+	* FvwmScript/Instructions.c (GetScriptArg):
+	Fixed GetScriptArg core dump
+	
 2000-01-02  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* FvwmTaskBar/FvwmTaskBar.h:
@@ -23,6 +28,7 @@
 
 	* FvwmScript/FvwmScript.1
 	New section EXAMPLES
+	
 1999-12-31  olicha  <olivier.chapuis@free.fr>
 
 	* FvwmScript/FvwmScript.c (BuildGUI):
